--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -5,20 +5,25 @@ on:
     branches:
       - main
 
+permissions:
+  contents: read
+  pages: write
+  id-token: write
+
 jobs:
   deploy:
     runs-on: ubuntu-latest
-    permissions:
-      contents: read
-      pages: write
-      id-token: write
-
     steps:
       - name: Checkout code
-        uses: actions/checkout@v4
+        uses: actions/checkout@v3
 
-      - name: Upload artifact
+      - name: Setup Pages
+        uses: actions/configure-pages@v3
+
+      - name: Upload site files
         uses: actions/upload-pages-artifact@v3
+        with:
+          path: .  # upload everything in the root folder
 
       - name: Deploy to GitHub Pages
-        uses: actions/deploy-pages@v4
+        uses: actions/deploy-pages@v2
