--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -17,13 +17,10 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
 
-      - name: Setup Pages
-        uses: actions/configure-pages@v3
-
       - name: Upload site files
         uses: actions/upload-pages-artifact@v3
         with:
-          path: .  # upload everything in the root folder
+          path: .  # 👈 this tells it to upload everything in the repo root
 
       - name: Deploy to GitHub Pages
         uses: actions/deploy-pages@v2
