--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,6 +24,12 @@ jobs:
       - name: Setup Pages
         uses: actions/configure-pages@v3
 
+      - name: Fix upload-artifact version
+        uses: actions/upload-artifact@v2
+        with:
+          name: dummy
+          path: README.md
+
       - name: Upload static files
         uses: actions/upload-pages-artifact@v2
         with:
