--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,4 +1,4 @@
-name: Deploy to GitHub Pages
+name: GitHub Pages Deploy
 
 on:
   push:
@@ -10,30 +10,16 @@ permissions:
   pages: write
   id-token: write
 
-concurrency:
-  group: "pages"
-  cancel-in-progress: true
-
 jobs:
   deploy:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v3
+      - uses: actions/checkout@v3
 
-      - name: Setup Pages
-        uses: actions/configure-pages@v3
+      - uses: actions/configure-pages@v3
 
-      - name: Fix upload-artifact version
-        uses: actions/upload-artifact@v2
+      - uses: actions/upload-pages-artifact@v1
         with:
-          name: dummy
-          path: README.md
+          path: .
 
-      - name: Upload static files
-        uses: actions/upload-pages-artifact@v2
-        with:
-          path: .  # deploy the root of your repo
-
-      - name: Deploy to GitHub Pages
-        uses: actions/deploy-pages@v2
+      - uses: actions/deploy-pages@v2
